CICO-5313 fixing issue with bill details overlapping contents

--- a/guestweb/css/less/snt.less
+++ b/guestweb/css/less/snt.less
@@ -418,6 +418,22 @@ color:#000000;
 }
 }
 
+.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
+  
+    padding: 1px !important;
+    padding-left : 12px !important;
+   
+}
+
+.table > tbody + tbody {
+    border-top:20px solid #fff !important;
+}
+.table > thead + tbody{
+    border-top:10px solid #fff !important;
+}
+.table > tbody + tfoot{
+    border-top:20px solid #fff !important;
+}
 
 .total {
 color:#9b9b9b;
@@ -533,6 +549,7 @@ margin: 25px auto;
 .guest-room-description0{
 color : #FF6600 !important;
 }
+
 
 .no-thanks{
 font-weight:normal !important;
